[gd_scene load_steps=6 format=2]

[ext_resource path="res://scripts/stage_start.gd" type="Script" id=1]
[ext_resource path="res://asset/GUI/stage_screen_bg.png" type="Texture" id=2]
[ext_resource path="res://font.gui.tres" type="DynamicFont" id=3]
[ext_resource path="res://font.gui.big.tres" type="DynamicFont" id=4]
[ext_resource path="res://sound/newstage.ogg" type="AudioStream" id=5]

[node name="stage_start" type="Node2D"]
script = ExtResource( 1 )

[node name="cr" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 512.0
margin_bottom = 256.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="cobra" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 153.0
margin_top = 256.0
margin_right = 532.0
margin_bottom = 623.0
rect_scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="c" type="CanvasLayer" parent="."]

[node name="vbc" type="VBoxContainer" parent="c"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -212.0
margin_top = -26.0
margin_right = 212.0
margin_bottom = 26.0
alignment = 1

[node name="hbc" type="HBoxContainer" parent="c/vbc"]
margin_top = 10.0
margin_right = 424.0
margin_bottom = 18.0
alignment = 1

[node name="stage" type="Label" parent="c/vbc/hbc"]
margin_left = 182.0
margin_right = 229.0
margin_bottom = 8.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_y = 1
text = "STAGE "
align = 1
valign = 1

[node name="stage_n" type="Label" parent="c/vbc/hbc"]
margin_left = 233.0
margin_right = 242.0
margin_bottom = 8.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_y = 1
text = "#"
align = 1
valign = 1

[node name="stage_empty" type="Label" parent="c/vbc"]
margin_top = 22.0
margin_right = 424.0
margin_bottom = 30.0
custom_fonts/font = ExtResource( 3 )
align = 1
valign = 1

[node name="stage_title" type="Label" parent="c/vbc"]
margin_top = 34.0
margin_right = 424.0
margin_bottom = 42.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_y = 1
text = "ACE DEGENERATE"
align = 1
valign = 1

[node name="cover" type="ColorRect" parent="c"]
margin_top = 55.0
margin_right = 512.0
margin_bottom = 255.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="flash" type="ColorRect" parent="c"]
margin_right = 512.0
margin_bottom = 256.0

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0
current = true

[node name="Tween" type="Tween" parent="."]

[node name="delay" type="Timer" parent="."]
autostart = true

[node name="Tween_cobra" type="Tween" parent="."]

[node name="bg" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
[connection signal="tween_all_completed" from="Tween" to="." method="_on_Tween_tween_all_completed"]
[connection signal="timeout" from="delay" to="." method="_on_delay_timeout"]
[connection signal="tween_all_completed" from="Tween_cobra" to="." method="_on_Tween_cobra_tween_all_completed"]
